product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/using_hybrid_manager/migration/migrate/migrations.mdx
---
title: Migrations
navTitle: Migrations
description: Learn about viewing migration details when performing database migrations to Hybrid Manager.
---

Migrations are processes you can start in a project of the Hybrid Manager to move data from one database to another. These processes include migrating an external Oracle database to an HM-managed cluster and to an externally managed Postgres instance, among others.

## Viewing existing migrations

After creating one or several migrations, this view displays all the migrations in the project in a table format. The table contains the columns:

-   **Name** — Name you assigned to a migration.

-   **Source** — Name of the source, configured through the **Sources** page. 

-   **Destination** — Name of the destination, either a database in an HM-managed cluster or a destination configured through the **Destinations** page.

-   **Status** — Current status of the migration.

### Status

HM can display the following statuses for a migration.

| Status    | Description                                                                                                                                                                   |
| --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Creating  | HM is creating resources required to perform a migration (for example, Kafka nodes).                                                                                          |
| Starting  | The initial phase of execution started, where the EDB DMS Reader/Writer connects to the source and/or target databases.                                                       |
| Running   | The migration is active and data is being transferred.                                                                                                                        |
| Pausing   | The migration is being temporarily stopped.                                                                                                                                   |
| Paused    | The migration was temporarily stopped and can be resumed.                                                                                                                     |
| Error     | Unspecified problem. Under **Migrations**, select the name of the migration to open the details page. Look at the **Error log** section for more information about the cause. |
| Completed | The migration finished successfully.                                                                                                                                          |
| Failed    | The migration encountered an error and could not be completed. Investigate HM Console logs to understand the specific cause.                                                  |
| Deleting  | The migration is being terminated.                                                                                                                                            |
| Deleted   | The migration was successfully terminated and removed.                                                                                                                        |

!!!note

    You can't use a source or destination that's part of an active migration (in any state, including running or paused) for another migration. The existing migration must be completed or deleted before you can reuse the source or destination.

## Creating a migration

Select **Create Migration** to create migrations. See [Creating migration](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/self_managed_pg_to_self_managed_pg/creating_migration/) and [Migration options in the Console](/) for details.

## Migration details page

For each migration that appears on this page, you can open a more detailed view by selecting the name of the migration. This page contains additional information on the status of the migration, type of migration, source and destination database information, and error logs that can help you to troubleshoot.

If you selected the **Snapshot + Streaming** option when [creating a migration](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/terminology/#snapshot--streaming-migration), you can use **Mark as Completed** to stop the streaming procedure.
